# LMagent-plus

./: .gitignore  CLAUDE.md  LARATODO.md  PLAN.md  README.md  TODO.md  chat  pyproject.toml  serve
.github/workflows/: ci.yml
cli/: __main__.py  main.py
core/: __init__.py  __main__.py  agent.py  app_prompt.py  config.py  context_vars.py  daemon.py  errors.py  ipc_protocol.py  persona_loader.py  router.py  tool_registry.py
core/memory/: __init__.py  para_store.py
core/runtime/: __init__.py  backend_detector.py  llama_manager.py  model_manager.py
core/tools/: __init__.py  _path_guard.py  bash.py  call_agent.py  file_ops.py  git.py  memory_ops.py
docs/: ARCHITECTURE.md  MEMORY.md  PERSONAS.md  RUNTIME.md  USER_DIR.md
installer/models/: recommended.yaml
personas/: _base.yaml  assistant.yaml  coder.yaml  research.yaml  writer.yaml
tests/: conftest.py  test_agent.py  test_agent_router.py  test_bash_security.py  test_call_agent.py  test_cli.py  test_config.py  test_file_ops_security.py  test_integration.py  test_memory.py  test_memory_dedup.py  test_persona_loader.py  test_runtime.py  test_streaming.py  test_tool_registry.py
