[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmagent-plus"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "huggingface_hub>=0.23",
    "textual>=0.60",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
lmagent = "cli.__main__:main"
lmagent-daemon = "core.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cli*"]
